load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_embed_data", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/s5i/ruuvi2db
gazelle(name = "gazelle")

go_library(
    name = "ruuvi2db_lib",
    srcs = ["main.go"],
    embed = [
        ":licenses_third_party",  # keep
    ],
    importpath = "github.com/s5i/ruuvi2db",
    visibility = ["//visibility:private"],
    deps = [
        "//bluetooth",
        "//config",
        "//data",
        "//db",
        "//db/bolt",
        "//db/influx",
        "//db/iowriter",
        "//http",
        "//protocol",
    ],
)

go_binary(
    name = "ruuvi2db",
    embed = [":ruuvi2db_lib"],
    visibility = ["//visibility:public"],
)

go_embed_data(
    name = "licenses_third_party",
    src = "LICENSES_THIRD_PARTY",
    package = "main",
    string = True,
    var = "Licenses",
)
