load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bluetooth",
    srcs = ["bluetooth.go"],
    importpath = "github.com/s5i/ruuvi2db/bluetooth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_ble_ble//:go_default_library",
        "@com_github_go_ble_ble//linux:go_default_library",
    ],
)
