load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_embed_data", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    embed = [
        ":config_go_proto",
        ":example_txt",  # keep
    ],
    importpath = "github.com/s5i/ruuvi2db/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_protobuf//proto:go_default_library"],
)

proto_library(
    name = "config_proto",
    srcs = ["format.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/s5i/ruuvi2db/config",
    proto = ":config_proto",
    visibility = ["//visibility:public"],
)

go_embed_data(
    name = "example_txt",
    src = "example.txt",
    package = "config",
    string = True,
    var = "ExampleConfig",
)
