load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = [
        "csv.go",
        "http.go",
        "time.go",
    ],
    importpath = "github.com/s5i/ruuvi2db/http",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//data",
        "//db",
        "//util",
    ],
)
