load("@io_bazel_rules_go//go:def.bzl", "go_embed_data", "go_library")

go_library(
    name = "http",
    srcs = [
        "csv.go",
        "http.go",
        "time.go",
    ],
    importpath = "github.com/s5i/ruuvi2db/http",
    visibility = ["//visibility:public"],
    embed = [
        ":static",  # keep
    ],
    deps = [
        "//config",
        "//data",
        "//db",
        "//util",
    ],
)

go_embed_data(
    name = "static",
    srcs = glob(["static/*"]),
    package = "http",
    flatten = True,
    var = "StaticData",
)
